feat: Allow Unicode in t element
This change allows bare Unicode in t element.
This also introduces new flag `--warn-bare-unicode` when set, `xml2rfc`
warns about bare Unicode in `<t>` element.
By default this is set to False.

--- a/tests/valid/docfile.html
+++ b/tests/valid/docfile.html
@@ -5488,7 +5488,7 @@ start |= rfc
         </h3>
 <p id="appendix-B.2-1">
                Some options to generate built-in documentation.
-               The group has 8 options.<a href="#appendix-B.2-1" class="pilcrow">¶</a></p>
+               The group has 9 options.<a href="#appendix-B.2-1" class="pilcrow">¶</a></p>
 <span class="break"></span><dl class="dlNewline" id="appendix-B.2-2">
           <dt id="appendix-B.2-2.1">
 <div id="option--help">
@@ -5594,6 +5594,15 @@ start |= rfc
                           Display the version number and exit.<a href="#appendix-B.2-2.16.1" class="pilcrow">¶</a></p>
 <p id="appendix-B.2-2.16.2">
        With the <code>--verbose</code> switch, the versions of the external python modules used will also be shown.<a href="#appendix-B.2-2.16.2" class="pilcrow">¶</a></p>
+</dd>
+          <dd class="break"></dd>
+<dt id="appendix-B.2-2.17">
+<div id="option--warn-bare-unicode">
+<code>--warn-bare-unicode</code>                    </div>
+          </dt>
+<dd style="margin-left: 1.5em" id="appendix-B.2-2.18">
+            <p id="appendix-B.2-2.18.1">
+                          Warn use of bare Unicode in tags where bare use of Unicode is not advisable.<a href="#appendix-B.2-2.18.1" class="pilcrow">¶</a></p>
 </dd>
         <dd class="break"></dd>
 </dl>
